--- a/style.css
+++ b/style.css
@@ -222,3 +222,68 @@ header{
     margin-left: 50px;
     margin-top: 30px;
 }
+
+/* Section Galerie */
+#galerie {
+    background-color: white;
+    padding: 30px 0;
+    text-align: center;
+}
+
+.gallery-title {
+    width: 272px;
+    height: 53px;
+    color: #9F6A34;
+    text-align: center;
+    font-family: "Playfair Display", serif;
+    font-size: 2.3rem;
+    font-weight: 600;
+    margin: 0 auto 30px;
+    margin-top: -20px;
+}
+
+.brown-line {
+    width: 250px;
+    border: 2px #9F6A34 solid;
+    margin: 20px auto 40px;
+    margin-top: -25px;
+    
+    
+}
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px 2px;
+    margin: 40px;
+  
+   
+    
+    
+}
+
+/* Image sans cadre */
+.gallery-image {
+    width: 400px;
+    height: 350px;
+    background-size: cover;
+    margin-bottom: 30px;
+    margin-left: 15px;
+    
+    
+   
+}
+
+/* Cadre conservé autour du nom de l'œuvre */
+.gallery-caption {
+    color: #FFF;
+    background-color: rgba(159.38, 105.59, 51.80, 0.64);
+    background-size: 20px;
+    font-family: "Playfair Display", serif;
+    font-size: 24px;
+    font-weight: 520;
+    padding: 20px;
+    width: 230px;
+    margin-left: 90px;
+    
+}
