--- a/style.css
+++ b/style.css
@@ -262,7 +262,7 @@ header{
 
 /* Image sans cadre */
 .gallery-image {
-    width: 400px;
+    max-width: 100%;
     height: 350px;
     background-size: cover;
     margin-bottom: 30px;
